[gd_scene load_steps=10 format=3 uid="uid://dn7w8hf4sanu"]

[ext_resource type="Script" uid="uid://clf2c6scei8yw" path="res://Scripts/Enemies/grabber_main.gd" id="1_skpw2"]
[ext_resource type="Script" uid="uid://b6yy4ug5xggoi" path="res://Scripts/Enemies/grabber_enemy.gd" id="2_asaak"]
[ext_resource type="Texture2D" uid="uid://c25m3clg6jo3k" path="res://Graphics/Enemies/Grabber.png" id="2_p1a5s"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uetrr"]
atlas = ExtResource("2_p1a5s")
region = Rect2(0, 16, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsj45"]
atlas = ExtResource("2_p1a5s")
region = Rect2(0, 32, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f3o6"]
atlas = ExtResource("2_p1a5s")
region = Rect2(0, 16, 48, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8i6g7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uetrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsj45")
}],
"loop": true,
"name": &"Grabbing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f3o6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6slgx"]
size = Vector2(32, 104)

[node name="Grabber" type="Node2D"]
script = ExtResource("1_skpw2")

[node name="String" type="ColorRect" parent="."]
offset_left = -1.0
offset_right = 1.0
offset_bottom = 8.0

[node name="GrabberEnemy" type="CharacterBody2D" parent="." groups=["Enemy"]]
position = Vector2(0, 8)
collision_layer = 16384
collision_mask = 0
script = ExtResource("2_asaak")

[node name="CollissionMask" type="CollisionShape2D" parent="GrabberEnemy"]
position = Vector2(0, 8)
shape = SubResource("1")

[node name="DamageArea" type="Area2D" parent="GrabberEnemy"]
position = Vector2(0, 8)
collision_layer = 0
collision_mask = 528384

[node name="HitBox" type="CollisionShape2D" parent="GrabberEnemy/DamageArea"]
modulate = Color(1, 0, 0, 1)
shape = SubResource("1")

[node name="MainSprite" type="AnimatedSprite2D" parent="GrabberEnemy"]
position = Vector2(-26, 0)
sprite_frames = SubResource("SpriteFrames_8i6g7")
autoplay = "default"
centered = false

[node name="ClawsBack" type="Sprite2D" parent="GrabberEnemy/MainSprite"]
unique_name_in_owner = true
position = Vector2(-6, 16)
texture = ExtResource("2_p1a5s")
centered = false
vframes = 7
frame = 5

[node name="ClawsFront" type="Sprite2D" parent="GrabberEnemy/MainSprite"]
unique_name_in_owner = true
z_index = 8
position = Vector2(2, 16)
texture = ExtResource("2_p1a5s")
centered = false
vframes = 7
frame = 3

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
visible = false
position = Vector2(1.90735e-06, -1.90735e-06)
rect = Rect2(-160, -120, 320, 240)
enable_node_path = NodePath("../GrabberEnemy")

[node name="Wheel" type="Sprite2D" parent="."]
position = Vector2(-28, -8)
texture = ExtResource("2_p1a5s")
centered = false
vframes = 14

[node name="Scan_Range" type="Area2D" parent="."]
position = Vector2(0, 32)
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scan_Range"]
position = Vector2(0, 44)
shape = SubResource("RectangleShape2D_6slgx")

[connection signal="area_entered" from="GrabberEnemy/DamageArea" to="GrabberEnemy" method="_on_DamageArea_area_entered"]
[connection signal="body_entered" from="GrabberEnemy/DamageArea" to="GrabberEnemy" method="_on_body_entered"]
[connection signal="body_exited" from="GrabberEnemy/DamageArea" to="GrabberEnemy" method="_on_body_exited"]
[connection signal="body_entered" from="Scan_Range" to="." method="_on_scan_range_body_entered"]
[connection signal="body_exited" from="Scan_Range" to="." method="_on_scan_range_body_exited"]
